[project]
name = "assay-calibration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fire>=0.7.0",
    "joblib>=1.5.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
]
